add zalupa konya

--- a/components/Main/Slider/Slide/index.module.scss
+++ b/components/Main/Slider/Slide/index.module.scss
@@ -24,6 +24,12 @@
   .mainContent {
     display: flex;
     align-items: flex-end;
+    @media screen and (min-width: 390px) and (max-width: 586px) {
+      display: flex;
+      flex-direction: column;
+      justify-content: flex-start;
+      align-items: flex-start;
+    }
   }
 
   .mainText {
@@ -34,6 +40,11 @@
 
   .text {
     padding: 40px;
+    @media screen and (min-width: 390px) and (max-width: 586px) {
+      h1 {
+        font-size: 32px;
+      }
+    }
   }
 
   img {
