--- a/components/Main/Category/index.module.scss
+++ b/components/Main/Category/index.module.scss
@@ -12,7 +12,7 @@
     width: 100%;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: repeat(4, 0.5fr);
+    grid-template-rows: repeat(4, 34px);
     box-sizing: border-box;
     border: 1px solid black;
     border-top: 0px solid black;
