--- a/components/Main/Collections/index.module.scss
+++ b/components/Main/Collections/index.module.scss
@@ -5,4 +5,12 @@
   justify-content: center;
   flex-wrap: wrap;
   background: var(--reup-green);
+
+  @media screen and (min-width: 390px) and (max-width: 586px) {
+    width: 100%;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    padding: 0.2rem;
+  }
 }
