--- a/components/common/CollectionCard/index.module.scss
+++ b/components/common/CollectionCard/index.module.scss
@@ -1,21 +1,25 @@
 .wrapper {
-  background: white;
   cursor: pointer;
   @media screen and (min-width: 390px) and (max-width: 586px) {
-    width: inherit;
-    height: 227px;
     img {
-      width: 100%;
-      height: 70%;
+      width: 186px;
+      height: 173px;
     }
   }
   .text {
+    width: 179px;
     display: flex;
     flex-direction: column;
     gap: 8px;
     margin-top: -5px;
     outline: 1px solid black;
     padding: 15px 12px;
+    @media screen and (min-width: 390px) and (max-width: 586px) {
+      padding: 15px 3px;
+      gap: 0;
+      text-align: center;
+    }
     margin-bottom: 1px;
+    background: white;
   }
 }
