--- a/components/Main/SaleSector/index.module.scss
+++ b/components/Main/SaleSector/index.module.scss
@@ -1,18 +1,46 @@
 .wrapper {
   margin-top: 2rem;
   border-top: 2px solid black;
+  @media screen and (min-width: 390px) and (max-width: 586px) {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+  }
 
   .moreBtn {
     align-self: end;
   }
 
+  .imgWrapper {
+    width: 100%;
+    @media screen and (min-width: 390px) and (max-width: 586px) {
+      width: 100%;
+    }
+  }
+
   .imgWrapper img {
     width: 100%;
     height: 100%;
+    @media screen and (min-width: 390px) and (max-width: 586px) {
+      width: 100%;
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      grid-template-rows: 2fr;
+    }
   }
   .row:first-child {
     display: grid;
     grid-template-columns: 1fr 2fr 1fr;
+    @media screen and (min-width: 390px) and (max-width: 586px) {
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      grid-template-rows: 2fr;
+      grid-row-start: 1;
+      grid-column-start: 2;
+
+      grid-row-end: 2;
+      grid-column-end: 3;
+    }
   }
   .row:last-child {
     display: grid;
@@ -25,7 +53,7 @@
     padding: 2rem;
     cursor: pointer;
     transition: 0.3s;
-    h1 {
+    h3 {
       font-family: 'Dela Gothic One', sans-serif;
       font-size: 32px;
       font-weight: bold;
@@ -42,6 +70,31 @@
       letter-spacing: 0.07em;
       transition: 0.3s;
       opacity: 0;
+    }
+
+    @media screen and (min-width: 390px) and (max-width: 586px) {
+      h3 {
+        font-family: 'Dela Gothic One', sans-serif;
+        font-size: 16px;
+        font-weight: bold;
+        line-height: 16px;
+        letter-spacing: 0.04em;
+        text-align: left;
+        padding-top: 0;
+        margin-top: 0;
+        padding: 0 !important;
+        margin: 0 !important;
+      }
+      span {
+        text-align: right;
+        font-family: 'Gilroy', sans-serif;
+        font-size: 8px;
+        // font-weight: 700;
+        // line-height: 16px;
+        letter-spacing: 0.07em;
+        transition: 0.3s;
+        opacity: 0;
+      }
     }
 
     &:hover {
