--- a/layouts/MainLayout/Footer/index.module.scss
+++ b/layouts/MainLayout/Footer/index.module.scss
@@ -5,51 +5,86 @@
     width: 100%;
     padding: 10px;
     display: flex;
+    flex-direction: column;
     justify-content: space-between;
   }
+
+  .content_flex_media_screen_mobile {
+    display: flex;
+    flex-direction: column;
+    .content_flex_media_screen {
+      display: flex;
+      flex-direction: row;
+      justify-content: space-between;
+      .content {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        margin-bottom: 30px;
+        @media screen and (min-width: 390px) and (max-width: 586px) {
+          display: flex;
+          flex-direction: column;
+          justify-content: space-around;
+          align-items: flex-start;
+          padding-top: 20px;
+          h2 {
+            text-align: left;
+            padding-bottom: 10px;
+          }
+        }
+      }
+      .text {
+        display: flex;
+        gap: 20px;
+        @media screen and (min-width: 390px) and (max-width: 586px) {
+          display: flex;
+          flex-direction: column;
+          gap: 5px;
+        }
+      }
+      .icons {
+        display: flex;
+        justify-content: center;
+        gap: 32px;
+    
+        @media screen and (min-width: 390px) and (max-width: 586px) {
+          align-self: flex-start;
+          padding-top: 20px;
+          gap: 15px;
+        }
+      }
+    }
+  
+    .btnBuy {
+      @media screen and (min-width: 390px) and (max-width: 586px) {
+        margin-top: 0;
+      }
+    }
+
+    .iconsIphone {
+      display: flex;
+      justify-content: space-around;
+      align-items:center;
+      margin-top: 97px;
+      img:hover {
+        cursor: pointer;
+      }
+    }
+  }
+  
   .content {
     display: flex;
     justify-content: space-between;
     align-items: center;
     margin-bottom: 30px;
-    @media screen and (min-width: 390px) and (max-width: 586px) {
-      display: flex;
-      flex-direction: column;
-      justify-content: space-around;
-      align-items: flex-start;
-      padding-top: 20px;
-      padding-bottom: 5rem;
-      h2 {
-        text-align: left;
-        padding-bottom: 10px;
-      }
-      button {
-        position: absolute;
-        top: 9rem;
-        right: 10px;
-        left: 10px;
-        align-items:center;
-      }
-    }
   }
   .text {
     display: flex;
     gap: 20px;
-    @media screen and (min-width: 390px) and (max-width: 586px) {
-      display: flex;
-      flex-direction: column;
-      gap: 5px;
-    }
   }
   .icons {
     display: flex;
     justify-content: center;
     gap: 32px;
-
-    @media screen and (min-width: 390px) and (max-width: 586px) {
-      align-self: flex-start;
-      padding-top: 20px;
-      gap: 15px;
-    }
   }
 }
