--- a/components/common/Heading/index.module.scss
+++ b/components/common/Heading/index.module.scss
@@ -9,6 +9,9 @@
     font-family: 'Dela Gothic One';
     font-size: 48px;
     letter-spacing: 0.04em;
+    @media screen and (min-width: 390px) and (max-width: 586px) {
+      font-size: 24px;
+    }
   }
 
   &.h2 {
