--- a/layouts/MainLayout/Header/Search/index.module.scss
+++ b/layouts/MainLayout/Header/Search/index.module.scss
@@ -128,3 +128,12 @@
     position: fixed;
     transition: .4s;
 }
+
+.search {
+    @media screen and (min-width: 390px) and (max-width: 586px) {
+        img {
+            width: 20px;
+            height: 20px;
+        }
+      }
+}
