--- a/layouts/MainLayout/Header/index.module.scss
+++ b/layouts/MainLayout/Header/index.module.scss
@@ -44,3 +44,12 @@
     cursor: pointer;
   }
 }
+
+.head_mobile {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  padding: 12px;
+}
