--- a/layouts/MainLayout/Header/index.module.scss
+++ b/layouts/MainLayout/Header/index.module.scss
@@ -46,10 +46,15 @@
 }
 
 .head_mobile {
-  width: 100%;
+  position: fixed;
+  width: calc(100% - 60px);
+  border-bottom: 1px solid black;
+  padding: 15px 30px;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
-  padding: 12px;
+  left: 0;
+  top: 0;
+  // padding: 12px;
 }
