--- a/components/Main/SaleSector/index.module.scss
+++ b/components/Main/SaleSector/index.module.scss
@@ -92,4 +92,110 @@
     display: flex;
     flex-direction: column;
   }
+
+  .upBlockMobile {
+    width: 100%;
+    display: flex;
+  }
+
+  .imgWrapperMobile {
+    width: 50%;
+    height: 160px;
+  }
+  .imgWrapperMobile img {
+    width: 100%;
+  }
+
+  .moreBtn {
+    align-self: end;
+    padding-top: 16px;
+  }
+
+  .infoMobile {
+    display: flex;
+    flex-direction: column;
+    width: 50%;
+    height: 160px;
+
+    h3 {
+      font-family: 'Dela Gothic One', sans-serif;
+      font-size: 16px;
+      font-weight: bold;
+      line-height: 16px;
+      letter-spacing: 0.04em;
+      text-align: left;
+      padding-top: 0;
+      margin-top: 0;
+      padding: 0 !important;
+      margin: 0 !important;
+      padding-top: 16px !important;
+      padding-left: 16px !important;
+    }
+    span {
+      text-align: right;
+      font-family: 'Gilroy', sans-serif;
+      font-size: 8px;
+      letter-spacing: 0.07em;
+      transition: 0.3s;
+      opacity: 0;
+    }
+  }
+
+  .rowMobile {
+    display: flex;
+    height: 110px;
+  }
+
+  .imgWrapperMobile3 {
+    height: 150px;
+  }
+
+  .imgWrapperMobile3 img {
+    width: 100%;
+    height: auto;
+    padding-bottom: 0;
+    margin-bottom: 0;
+  }
+
+  .greenWrapperMobile {
+    background: var(--reup-green);
+    padding-bottom: 0;
+    margin-bottom: 0;
+    .moreBtn {
+      padding-right: 16px;
+    }
+  }
+  .greenWrapperMobile h1 {
+    font-family: 'Dela Gothic One';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 110%;
+    display: flex;
+    align-items: center;
+    letter-spacing: 0.04em;
+    color: #000000;
+  }
+
+  .rowMobileLast {
+    width: 100%;
+    margin-bottom: 48px;
+    padding-top: 0;
+  }
+
+  .lastRow {
+    width: 100%;
+    height: 95px;
+    display: flex;
+    flex-direction: column;
+    padding: 16px;
+
+    .moreBtn {
+      align-items: flex-end;
+    }
+  }
+
+  .lastRow h3 {
+    align-self: flex-end;
+  }
 }
