--- a/components/Main/Slider/index.module.scss
+++ b/components/Main/Slider/index.module.scss
@@ -4,7 +4,7 @@
   display: flex;
   height: auto;
   position: relative;
-  margin-top: 3.5rem;
+  margin-top: 64px;
   .slides {
     width: 100%;
   }
