--- a/components/common/ProductCard/PreviewProductModal/index.module.scss
+++ b/components/common/ProductCard/PreviewProductModal/index.module.scss
@@ -1,6 +1,10 @@
 .contentWrapper {
   display: flex;
   gap: 20px;
+  @media screen and (min-width: 390px) and (max-width: 586px) {
+    display: flex;
+    flex-direction: column;
+  }
 
   .imgWrapper {
     width: 50%;
@@ -10,6 +14,12 @@
     }
   }
   .info {
+    @media screen and (min-width: 390px) and (max-width: 586px) {
+      display: flex;
+      flex-direction: column;
+      margin-top: 0;
+      padding-top: 0;
+    }
     .heading {
       display: flex;
       gap: 2rem;
