--- a/components/common/ProductCard/PreviewProductModal/Slider/index.module.scss
+++ b/components/common/ProductCard/PreviewProductModal/Slider/index.module.scss
@@ -17,6 +17,10 @@
     transition: 0.3s;
     width: 100%;
     height: auto;
+    @media screen and (min-width: 390px) and (max-width: 586px) {
+      padding: 0;
+      margin: 0;
+    }
   }
 }
 
@@ -30,6 +34,11 @@
   border-radius: 50%;
   z-index: 100;
   cursor: pointer;
+  @media screen and (min-width: 390px) and (max-width: 586px) {
+    position: absolute;
+    bottom: 20px;
+    top: auto;
+  }
 }
 
 .counter {
