--- a/components/Basket/BasketItems/index.module.scss
+++ b/components/Basket/BasketItems/index.module.scss
@@ -20,3 +20,9 @@
     }
   }
 }
+
+// @media screen and (min-width: 390px) and (max-width: 586px) {
+//   h1 {
+//     font-size: 32px !important;
+//   }
+// }
