part of cascad dropdowns

--- a/components/common/CollapseCascade/index.module.scss
+++ b/components/common/CollapseCascade/index.module.scss
@@ -3,10 +3,10 @@
   margin: 1rem 0;
 }
 
-.content {
-  overflow: hidden;
-  transition: 0.3s;
-}
+// .content {
+//   overflow: hidden;
+//   transition: 0.3s;
+// }
 
 .moreText,
 .title {
@@ -15,7 +15,7 @@
 
 .minus {
   position: absolute;
-  transition: 0.3s;
+  //   transition: 0.3s;
 }
 
 .collapseIcon {
@@ -33,7 +33,7 @@
 
 .wrapper {
   position: relative;
-  transition: 0.3s;
+  //   transition: 0.3s;
 }
 
 .icon {
