--- a/components/common/CollapseCascade/index.module.scss
+++ b/components/common/CollapseCascade/index.module.scss
@@ -1,7 +1,8 @@
-.content:nth-child(2) {
+.content .wrapper {
   margin-left: 1rem;
   background-color: red;
 }
+
 .content {
   overflow-x: hidden;
   overflow-y: hidden;
@@ -38,4 +39,5 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  padding: 1rem 0;
 }
