--- a/components/Order/OrderItems/FormCard/index.module.scss
+++ b/components/Order/OrderItems/FormCard/index.module.scss
@@ -6,12 +6,13 @@
   margin-bottom: 6rem;
 
   .header {
+    font-family: Dela Gothic One;
     font-weight: 700;
-    font-size: 40px;
-    line-height: 49px;
+    font-size: 32px;
+    line-height: 36px;
     margin-bottom: 1.5rem;
     text-transform: lowercase;
-    transform: translateX(-2rem);
+    transform: translateX(-3rem);
   }
 
   input {
