--- a/components/common/OrderPreview/PriceInfo/index.module.scss
+++ b/components/common/OrderPreview/PriceInfo/index.module.scss
@@ -5,8 +5,18 @@
 
   .title,
   .price {
+    white-space: nowrap;
+  }
+
+  .title {
     font-size: 20px;
     line-height: 24px;
+  }
+
+  .price {
+    font-size: 16px;
+    line-height: 18px;
+    font-weight: 300;
   }
 
   .infoRow {
@@ -22,15 +32,15 @@
     }
   }
 
-  .totalPrice {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-end;
+  // .totalPrice {
+  //   display: flex;
+  //   flex-direction: column;
+  //   align-items: flex-end;
 
-    .price {
-      font-weight: 700;
-      font-size: 25px;
-      line-height: 30px;
-    }
-  }
+  //   .price {
+  //     font-weight: 700;
+  //     font-size: 25px;
+  //     line-height: 30px;
+  //   }
+  // }
 }
