--- a/components/common/DropDownChoice/index.module.scss
+++ b/components/common/DropDownChoice/index.module.scss
@@ -50,11 +50,12 @@
 
 .collapseIcon {
   cursor: pointer;
-  width: 12px;
+  height: 100%;
+  display: flex;
+  align-items: center;
   position: absolute;
   right: 24px;
-  top: 50%;
-  transform: translate(0, -50%);
+  top: 0;
 
   .icon {
     width: 18px;
