--- a/components/Order/OrderItems/index.module.scss
+++ b/components/Order/OrderItems/index.module.scss
@@ -10,21 +10,21 @@
     margin-bottom: 6rem;
   }
 
-  .submitButton {
-    max-width: 28rem;
-    padding: 1rem;
-    border: 0;
-    background-color: #8a8a8a;
-    color: #ffffff;
-    font-weight: 400;
-    font-size: 20px;
-    line-height: 24px;
-    text-transform: uppercase;
-  }
+  // .submitButton {
+  //   max-width: 28rem;
+  //   padding: 1rem;
+  //   border: 0;
+  //   background-color: #8a8a8a;
+  //   color: #ffffff;
+  //   font-weight: 400;
+  //   font-size: 20px;
+  //   line-height: 24px;
+  //   text-transform: uppercase;
+  // }
 
-  .submitButton.active {
-    background-color: #024efb;
-    font-weight: 700;
-    cursor: pointer;
-  }
+  // .submitButton.active {
+  //   background-color: #024efb;
+  //   font-weight: 700;
+  //   cursor: pointer;
+  // }
 }
