--- a/components/Brands/Scheme3/index.module.scss
+++ b/components/Brands/Scheme3/index.module.scss
@@ -9,8 +9,40 @@
     margin-bottom: 1rem;
   }
 }
-.uploadBtn {
-  position: absolute;
-  top: 5%;
-  left: 5%;
+
+.banner {
+  position: relative;
+  width: 100%;
+  height: 65vh;
+  background: var(--reup-gray);
+
+  box-sizing: border-box;
+  .uploadBtn {
+    position: absolute;
+    top: 5%;
+    left: 5%;
+  }
+}
+
+.cards {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr;
+  gap: 1px;
+  background-color: black;
+  border: 1px solid black;
+
+  .card {
+    background: white;
+    img {
+      width: 100%;
+      height: 100%;
+    }
+  }
+  .text {
+    padding: 1rem;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+  }
 }
