--- a/components/Basket/BasketItems/BasketItem/index.module.scss
+++ b/components/Basket/BasketItems/BasketItem/index.module.scss
@@ -18,4 +18,16 @@
     margin-bottom: 1rem;
     border-bottom: 1px solid black;
   }
+
+  .right {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: flex-end;
+    .deleteSvg {
+      width: 20px;
+      height: auto;
+      cursor: pointer;
+    }
+  }
 }
