--- a/components/common/Select/index.module.scss
+++ b/components/common/Select/index.module.scss
@@ -1,43 +1,46 @@
 .wrapper {
-  padding: calc(var(--reup-unit) * 2) calc(var(--reup-unit) * 6);
-  border: 2px solid black;
-  display: inline-block;
+  padding: 16px 24px;
+  border: 1px solid #828282;
   position: relative;
-  width: 200px;
-  text-align: center;
-  .title {
-    font-family: 'Gilroy', sans-serif;
-    font-size: 18px;
-    font-weight: 700;
-    line-height: 21px;
-    letter-spacing: 0.07em;
-    cursor: pointer;
+  height: 16px;
+  cursor: pointer;
+
+  .content {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+    .label {
+      color: #828282;
+    }
   }
-  .dd {
+
+  .dropdown {
     position: absolute;
-    border: 2px solid black;
+    border: 1px solid #828282;
     width: 100%;
-    left: 0;
+    left: -1px;
     top: calc(100%);
+    transition: 0.3s;
     opacity: 0;
     pointer-events: none;
-    transition: 0.3s;
-    &.ddVisible {
+    z-index: 10;
+
+    &.visible {
+      transition: 0.3s;
       opacity: 1;
       pointer-events: auto;
     }
+
     .option {
-      text-align: center;
       transition: 0.3s;
-      padding: 0.5rem;
-      font-size: 16px;
-      font-weight: bold;
+      padding: 8px 24px;
       background: white;
       &:hover {
         background: #e3e3e3;
       }
       &.selected {
-        background: #8b30f2;
+        background: #e3e3e3;
       }
     }
   }
