--- a/components/common/ProductCard/PreviewProductModal/Slider/index.module.scss
+++ b/components/common/ProductCard/PreviewProductModal/Slider/index.module.scss
@@ -3,6 +3,7 @@
   position: relative;
   .slides {
     width: 100%;
+    height: 100%;
     position: absolute;
     overflow: hidden;
     display: flex;
