--- a/components/Product/index.module.scss
+++ b/components/Product/index.module.scss
@@ -4,6 +4,12 @@
   padding: 50px;
 
   .formWrapper {
-    padding: 72px 204px;
+    padding: 72px 154px;
+
+    .confirm {
+      display: flex;
+      justify-content: right;
+      padding-top: 16px;
+    }
   }
 }
