--- a/components/Product/MediaBlock/index.module.scss
+++ b/components/Product/MediaBlock/index.module.scss
@@ -5,18 +5,15 @@
     display: flex;
     padding-top: 32px;
 
-    .selectBlock {
-      display: flex;
-      flex-direction: column;
-      gap: 32px;
+    .mainImage {
+      min-width: 325px;
     }
 
-    .inputBlock {
+    .images {
       display: flex;
-      flex-direction: column;
-      gap: 32px;
-      margin-left: 32px;
-      width: 100%;
+      flex-wrap: wrap;
+      gap: 24px;
+      padding-left: 24px;
     }
   }
 }
